# SkelAnimation

./: .gitignore  CMakeLists.txt  LICENSE  NuklearDemo.cpp  README.md  main.cpp
.github/workflows/: build-cpp.yml
Shaders/: skinned.vert
src/: main.cpp
src/Animation/: Clip.cpp  Clip.h  Frame.h  Interpolation.h  Pose.cpp  Pose.h  RearrangeBones.cpp  RearrangeBones.h  Skeleton.cpp  Skeleton.h  Track.cpp  Track.h  TransformTrack.cpp  TransformTrack.h
src/AnimationBlending/: Blending.cpp  Blending.h  Crossfading.cpp  Crossfading.h
src/Crowds/: AnimBaker.h  AnimTexture.cpp  AnimTexture.h  Crowd.cpp  Crowd.h
src/GLTF/: GLTFLoader.cpp  GLTFLoader.h
src/IK/: CCDSolver.cpp  CCDSolver.h  FABRIKSolver.cpp  FABRIKSolver.h  IKLeg.cpp  IKLeg.h
src/Math/: DualQuaternio.cpp  DualQuaternion.h
src/Misc/: Intersections.cpp  Intersections.h
src/RHI/: Uniform.h
src/RHI/Backend/OpenGL/: Attribute.cpp  Draw.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp  Uniform.cpp
src/RHI/Rendering/: DebugDraw.cpp  DebugDraw.h  Mesh.cpp  Mesh.h
src/Samples/: Application.h  Camera.cpp  Camera.h  Chapter06Sample01.cpp  Chapter06Sample01.h  Chapter08Sample01.h  Chapter09Sample01.cpp  Chapter09Sample01.h  Chapter10Sample01.cpp  Chapter10Sample01.h  Chapter10Sample02.cpp  Chapter10Sample02.h  Chapter11Sample01.cpp  Chapter11Sample01.h  Chapter11Sample02.cpp  Chapter11Sample02.h  Chapter11Sample03.cpp  Chapter11Sample03.h  Chapter12Sample01.cpp  Chapter12Sample01.h  Chapter12Sample02.cpp  Chapter12Sample02.h  Chapter12Sample03.cpp  Chapter12Sample03.h  Chapter13Sample01.cpp  Chapter13Sample01.h  Chapter13Sample02.cpp  Chapter13Sample02.h  Chapter13Sample03.cpp  Chapter13Sample03.h  Chapter14Sample01.cpp  Chapter14Sample01.h  Chapter15Sample01.cpp  Chapter15Sample01.h  MouseState.h  SampleSelector.cpp
src/Samples/Framework/: SamplePoseInstance.h  SampleSelector.cpp  SampleSelector.h
